tests/errors/coherence-nb_params_2.kawa
var point p;

class point {
  attribute int x;
  attribute int y;

  method void constructor (int x, int y) {
    this.x = x;
    this.y = y;
  }

}

main {
  p = new point(1); // pas assez de paramètres
  return 0;
}
